fix code conventions